force-app/main/default/objects/blng__PaymentTransaction__c/blng__PaymentTransaction__c.object-meta.xml
<CustomObject>
    <label>Payment Transaction</label>
    <nameField>
        <displayFormat>TRX-{000000000}</displayFormat>
        <label>Payment Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>