force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__Authorization__c.field-meta.xml
<CustomField>
    <fullName>blng__Authorization__c</fullName>
    <label>Authorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>