force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__AVSResponseCode__c.field-meta.xml
<CustomField>
    <fullName>blng__AVSResponseCode__c</fullName>
    <label>AVS Response Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>