force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__CardCodeResponse__c.field-meta.xml
<CustomField>
    <fullName>blng__CardCodeResponse__c</fullName>
    <description>Card Code Response</description>
    <inlineHelpText>CVV/CVV2 has matched or not</inlineHelpText>
    <label>Card Code Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>