force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>blng__ExceptionMessage__c</fullName>
    <description>Exception Message
When a Transaction is created and Payment is not created against Invoice</description>
    <inlineHelpText>Exception Message
When a Transaction is created and Payment is not created against Invoice</inlineHelpText>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>