force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__GatewayDate__c.field-meta.xml
<CustomField>
    <fullName>blng__GatewayDate__c</fullName>
    <label>Gateway Date</label>
    <type>DateTime</type>
</CustomField>