force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__GatewayID__c.field-meta.xml
<CustomField>
    <fullName>blng__GatewayID__c</fullName>
    <label>Response Gateway ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>