force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__GatewayStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__GatewayStatus__c</fullName>
    <label>Gateway Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PaymentGatewayStatus</valueSetName>
    </valueSet>
</CustomField>