force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__PaymentRun__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Run</label>
    <referenceTo>blng__PaymentRun__c</referenceTo>
    <relationshipName>PaymentRunTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>