force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>blng__ReasonCode__c</fullName>
    <label>Reason Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>