force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__RequestCreditCardNumber__c.field-meta.xml
<CustomField>
    <fullName>blng__RequestCreditCardNumber__c</fullName>
    <label>Request - Credit Card Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>