force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__RequestInvoice__c.field-meta.xml
<CustomField>
    <fullName>blng__RequestInvoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipName>RequestInvoiceTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>