force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__RequestTransactionType__c.field-meta.xml
<CustomField>
    <fullName>blng__RequestTransactionType__c</fullName>
    <label>Request - Transaction Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>