force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__RequestTypeOfPayment__c.field-meta.xml
<CustomField>
    <fullName>blng__RequestTypeOfPayment__c</fullName>
    <label>Request - Type Of Payment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>