force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__Response__c.field-meta.xml
<CustomField>
    <fullName>blng__Response__c</fullName>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>