force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>blng__ResponseCode__c</fullName>
    <label>Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>