force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__ResponseMessage__c.field-meta.xml
<CustomField>
    <fullName>blng__ResponseMessage__c</fullName>
    <label>Response Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>