force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__ResponseStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__ResponseStatus__c</fullName>
    <label>Response Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>