force-app/main/default/objects/blng__PaymentTransaction__c/fields/blng__Transaction__c.field-meta.xml
<CustomField>
    <fullName>blng__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Transaction</label>
    <referenceTo>blng__PaymentTransaction__c</referenceTo>
    <relationshipName>ParentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>