force-app/main/default/objects/blng__PaymentTransaction__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__PaymentGateway__c</columns>
    <columns>blng__RequestTransactionType__c</columns>
    <columns>blng__RequestTypeOfPayment__c</columns>
    <columns>blng__Type__c</columns>
    <columns>blng__Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>