force-app/main/default/objects/blng__PaymentTransaction__c/listViews/blng__TranscationPaymentRun.listView-meta.xml
<ListView>
    <fullName>blng__TranscationPaymentRun</fullName>
    <columns>NAME</columns>
    <columns>blng__PaymentRun__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>blng__PaymentRun__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>TranscationPaymentRun</label>
    <language>en_US</language>
</ListView>